Migración de bitbucket
Se migra lo último de bitbucket

--- a/Clientes.html
+++ b/Clientes.html
@@ -357,6 +357,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 										<span class="tst-division"></span>
 									</div>
 								</div>
+								<div class="col-sm-6">
+                  <div class="testimonial-wrap top-quote-box">
+                    <p class="tst-body">" Muchas gracias por el buen trabajo muy felices con todo."</p>
+                    <h5 class="tst-author">-Universidad del Desarrollo</h5>
+										<span class="tst-division"></span>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
