--- a/Portafolio.html
+++ b/Portafolio.html
@@ -150,6 +150,213 @@
 							<!-- Arteimpresiones -->
 							<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 project_img mbot30 effect-goliath isotopeSelector arteimpresiones">
 								<div class="img-container">
+									<img src="images/portafolio/arteimpresiones264.jpg" class="img1-responsive">
+									<div class="overlay">
+										<a href="images/portafolio/zoom/arteimpresiones264.jpg" class="image-zoom" data-effect="mfp-zoom-in">
+										<i class="flaticon-arrows-2"></i></a>
+									</div>
+								</div>
+							</div>
+							<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 project_img mbot30 effect-goliath isotopeSelector arteimpresiones">
+								<div class="img-container">
+									<img src="images/portafolio/arteimpresiones265.jpg" class="img1-responsive">
+									<div class="overlay">
+										<a href="images/portafolio/zoom/arteimpresiones265.jpg" class="image-zoom" data-effect="mfp-zoom-in">
+										<i class="flaticon-arrows-2"></i></a>
+									</div>
+								</div>
+							</div>
+							<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 project_img mbot30 effect-goliath isotopeSelector arteimpresiones">
+								<div class="img-container">
+									<img src="images/portafolio/arteimpresiones266.jpg" class="img1-responsive">
+									<div class="overlay">
+										<a href="images/portafolio/zoom/arteimpresiones266.jpg" class="image-zoom" data-effect="mfp-zoom-in">
+										<i class="flaticon-arrows-2"></i></a>
+									</div>
+								</div>
+							</div>
+							<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 project_img mbot30 effect-goliath isotopeSelector arteimpresiones">
+								<div class="img-container">
+									<img src="images/portafolio/arteimpresiones267.jpg" class="img1-responsive">
+									<div class="overlay">
+										<a href="images/portafolio/zoom/arteimpresiones267.jpg" class="image-zoom" data-effect="mfp-zoom-in">
+										<i class="flaticon-arrows-2"></i></a>
+									</div>
+								</div>
+							</div>
+							<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 project_img mbot30 effect-goliath isotopeSelector arteimpresiones">
+								<div class="img-container">
+									<img src="images/portafolio/arteimpresiones268.jpg" class="img1-responsive">
+									<div class="overlay">
+										<a href="images/portafolio/zoom/arteimpresiones268.jpg" class="image-zoom" data-effect="mfp-zoom-in">
+										<i class="flaticon-arrows-2"></i></a>
+									</div>
+								</div>
+							</div>
+							<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 project_img mbot30 effect-goliath isotopeSelector arteimpresiones">
+								<div class="img-container">
+									<img src="images/portafolio/arteimpresiones269.jpg" class="img1-responsive">
+									<div class="overlay">
+										<a href="images/portafolio/zoom/arteimpresiones269.jpg" class="image-zoom" data-effect="mfp-zoom-in">
+										<i class="flaticon-arrows-2"></i></a>
+									</div>
+								</div>
+							</div>
+							<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 project_img mbot30 effect-goliath isotopeSelector arteimpresiones">
+								<div class="img-container">
+									<img src="images/portafolio/arteimpresiones270.jpg" class="img1-responsive">
+									<div class="overlay">
+										<a href="images/portafolio/zoom/arteimpresiones270.jpg" class="image-zoom" data-effect="mfp-zoom-in">
+										<i class="flaticon-arrows-2"></i></a>
+									</div>
+								</div>
+							</div>
+							<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 project_img mbot30 effect-goliath isotopeSelector arteimpresiones">
+								<div class="img-container">
+									<img src="images/portafolio/arteimpresiones271.jpg" class="img1-responsive">
+									<div class="overlay">
+										<a href="images/portafolio/zoom/arteimpresiones271.jpg" class="image-zoom" data-effect="mfp-zoom-in">
+										<i class="flaticon-arrows-2"></i></a>
+									</div>
+								</div>
+							</div>
+							<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 project_img mbot30 effect-goliath isotopeSelector arteimpresiones">
+								<div class="img-container">
+									<img src="images/portafolio/arteimpresiones272.jpg" class="img1-responsive">
+									<div class="overlay">
+										<a href="images/portafolio/zoom/arteimpresiones272.jpg" class="image-zoom" data-effect="mfp-zoom-in">
+										<i class="flaticon-arrows-2"></i></a>
+									</div>
+								</div>
+							</div>
+							<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 project_img mbot30 effect-goliath isotopeSelector arteimpresiones">
+								<div class="img-container">
+									<img src="images/portafolio/arteimpresiones273.jpg" class="img1-responsive">
+									<div class="overlay">
+										<a href="images/portafolio/zoom/arteimpresiones273.jpg" class="image-zoom" data-effect="mfp-zoom-in">
+										<i class="flaticon-arrows-2"></i></a>
+									</div>
+								</div>
+							</div>
+							<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 project_img mbot30 effect-goliath isotopeSelector arteimpresiones">
+								<div class="img-container">
+									<img src="images/portafolio/arteimpresiones274.jpg" class="img1-responsive">
+									<div class="overlay">
+										<a href="images/portafolio/zoom/arteimpresiones274.jpg" class="image-zoom" data-effect="mfp-zoom-in">
+										<i class="flaticon-arrows-2"></i></a>
+									</div>
+								</div>
+							</div>
+							<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 project_img mbot30 effect-goliath isotopeSelector artestampado">
+								<div class="img-container">
+									<img src="images/portafolio/artestampado41.jpg" class="img1-responsive">
+									<div class="overlay">
+										<a href="images/portafolio/zoom/artestampado41.jpg" class="image-zoom" data-effect="mfp-zoom-in">
+										<i class="flaticon-arrows-2"></i></a>
+									</div>
+								</div>
+							</div>
+							<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 project_img mbot30 effect-goliath isotopeSelector artestampado">
+								<div class="img-container">
+									<img src="images/portafolio/artestampado42.jpg" class="img1-responsive">
+									<div class="overlay">
+										<a href="images/portafolio/zoom/artestampado42.jpg" class="image-zoom" data-effect="mfp-zoom-in">
+										<i class="flaticon-arrows-2"></i></a>
+									</div>
+								</div>
+							</div>
+							<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 project_img mbot30 effect-goliath isotopeSelector artestampado">
+								<div class="img-container">
+									<img src="images/portafolio/artestampado43.jpg" class="img1-responsive">
+									<div class="overlay">
+										<a href="images/portafolio/zoom/artestampado43.jpg" class="image-zoom" data-effect="mfp-zoom-in">
+										<i class="flaticon-arrows-2"></i></a>
+									</div>
+								</div>
+							</div>
+							<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 project_img mbot30 effect-goliath isotopeSelector artestampado">
+								<div class="img-container">
+									<img src="images/portafolio/artestampado44.jpg" class="img1-responsive">
+									<div class="overlay">
+										<a href="images/portafolio/zoom/artestampado44.jpg" class="image-zoom" data-effect="mfp-zoom-in">
+										<i class="flaticon-arrows-2"></i></a>
+									</div>
+								</div>
+							</div>
+							<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 project_img mbot30 effect-goliath isotopeSelector artestampado">
+								<div class="img-container">
+									<img src="images/portafolio/artestampado45.jpg" class="img1-responsive">
+									<div class="overlay">
+										<a href="images/portafolio/zoom/artestampado45.jpg" class="image-zoom" data-effect="mfp-zoom-in">
+										<i class="flaticon-arrows-2"></i></a>
+									</div>
+								</div>
+							</div>
+							<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 project_img mbot30 effect-goliath isotopeSelector artedeco">
+								<div class="img-container">
+									<img src="images/portafolio/artedeco65.jpg" class="img1-responsive">
+									<div class="overlay">
+										<a href="images/portafolio/zoom/artedeco65.jpg" class="image-zoom" data-effect="mfp-zoom-in">
+										<i class="flaticon-arrows-2"></i></a>
+									</div>
+								</div>
+							</div>
+							<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 project_img mbot30 effect-goliath isotopeSelector artedeco">
+								<div class="img-container">
+									<img src="images/portafolio/artedeco66.jpg" class="img1-responsive">
+									<div class="overlay">
+										<a href="images/portafolio/zoom/artedeco66.jpg" class="image-zoom" data-effect="mfp-zoom-in">
+										<i class="flaticon-arrows-2"></i></a>
+									</div>
+								</div>
+							</div>
+							<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 project_img mbot30 effect-goliath isotopeSelector artedeco">
+								<div class="img-container">
+									<img src="images/portafolio/artedeco67.jpg" class="img1-responsive">
+									<div class="overlay">
+										<a href="images/portafolio/zoom/artedeco67.jpg" class="image-zoom" data-effect="mfp-zoom-in">
+										<i class="flaticon-arrows-2"></i></a>
+									</div>
+								</div>
+							</div>
+							<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 project_img mbot30 effect-goliath isotopeSelector artedeco">
+								<div class="img-container">
+									<img src="images/portafolio/artedeco68.jpg" class="img1-responsive">
+									<div class="overlay">
+										<a href="images/portafolio/zoom/artedeco68.jpg" class="image-zoom" data-effect="mfp-zoom-in">
+										<i class="flaticon-arrows-2"></i></a>
+									</div>
+								</div>
+							</div>
+							<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 project_img mbot30 effect-goliath isotopeSelector artedeco">
+								<div class="img-container">
+									<img src="images/portafolio/artedeco69.jpg" class="img1-responsive">
+									<div class="overlay">
+										<a href="images/portafolio/zoom/artedeco69.jpg" class="image-zoom" data-effect="mfp-zoom-in">
+										<i class="flaticon-arrows-2"></i></a>
+									</div>
+								</div>
+							</div>
+							<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 project_img mbot30 effect-goliath isotopeSelector artedeco">
+								<div class="img-container">
+									<img src="images/portafolio/artedeco70.jpg" class="img1-responsive">
+									<div class="overlay">
+										<a href="images/portafolio/zoom/artedeco70.jpg" class="image-zoom" data-effect="mfp-zoom-in">
+										<i class="flaticon-arrows-2"></i></a>
+									</div>
+								</div>
+							</div>
+							<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 project_img mbot30 effect-goliath isotopeSelector artedeco">
+								<div class="img-container">
+									<img src="images/portafolio/artedeco71.jpg" class="img1-responsive">
+									<div class="overlay">
+										<a href="images/portafolio/zoom/artedeco71.jpg" class="image-zoom" data-effect="mfp-zoom-in">
+										<i class="flaticon-arrows-2"></i></a>
+									</div>
+								</div>
+							</div>
+							<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 project_img mbot30 effect-goliath isotopeSelector arteimpresiones">
+								<div class="img-container">
 									<img src="images/portafolio/arteimpresiones2.jpg" class="img1-responsive">
 									<div class="overlay">
 										<a href="images/portafolio/arteimpresiones2.jpg" class="image-zoom" data-effect="mfp-zoom-in">
@@ -1372,6 +1579,26 @@
 									<img src="images/portafolio/artestampado38.jpg" class="img1-responsive">
 									<div class="overlay">
 										<a href="images/portafolio/zoom/artestampado38.jpg" class="image-zoom" data-effect="mfp-zoom-in">
+											<i class="flaticon-arrows-2"></i>
+										</a>
+									</div>
+								</div>
+							</div>
+							<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 project_img mbot30 effect-goliath isotopeSelector artestampado">
+								<div class="img-container">
+									<img src="images/portafolio/artestampado39.png" class="img1-responsive">
+									<div class="overlay">
+										<a href="images/portafolio/zoom/artestampado39.png" class="image-zoom" data-effect="mfp-zoom-in">
+											<i class="flaticon-arrows-2"></i>
+										</a>
+									</div>
+								</div>
+							</div>
+							<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 project_img mbot30 effect-goliath isotopeSelector artestampado">
+								<div class="img-container">
+									<img src="images/portafolio/artestampado40.png" class="img1-responsive">
+									<div class="overlay">
+										<a href="images/portafolio/zoom/artestampado40.png" class="image-zoom" data-effect="mfp-zoom-in">
 											<i class="flaticon-arrows-2"></i>
 										</a>
 									</div>
