--- a/Promociones.html
+++ b/Promociones.html
@@ -127,10 +127,23 @@
 		<div class="row">
 			<div class="col-sm-6 col-md-4">
 				<div class="thumbnail">
-					<a class="lightbox" href="images/packs/pack6.png">
-						<img src="images/packs/pack6.png" alt="Titulo">
+					<a class="lightbox" href="images/packs/pack8.jpg">
+						<img src="images/packs/pack8.jpg" alt="Titulo">
 					</a>
-
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-4">
+				<div class="thumbnail">
+					<a class="lightbox" href="images/packs/pack9.jpg">
+						<img src="images/packs/pack9.jpg" alt="Titulo">
+					</a>
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-4">
+				<div class="thumbnail">
+					<a class="lightbox" href="images/packs/pack6.jpg">
+						<img src="images/packs/pack6.jpg" alt="Titulo">
+					</a>
 				</div>
 			</div>
 			<div class="col-sm-6 col-md-4">
@@ -138,7 +151,6 @@
 					<a class="lightbox" href="images/packs/pack4.png">
 						<img src="images/packs/pack4.png" alt="Titulo">
 					</a>
-
 				</div>
 			</div>
 			<div class="col-sm-6 col-md-4">
@@ -146,7 +158,6 @@
 					<a class="lightbox" href="images/packs/pack1.png">
 						<img src="images/packs/pack1.png" alt="Titulo">
 					</a>
-
 				</div>
 			</div>
 			<div class="col-sm-6 col-md-4">
@@ -154,7 +165,6 @@
 					<a class="lightbox" href="images/packs/pack2.png">
 						<img src="images/packs/pack2.png" alt="Titulo">
 					</a>
-
 				</div>
 			</div>
 			<div class="col-sm-6 col-md-4">
@@ -162,7 +172,6 @@
 					<a class="lightbox" href="images/packs/pack3.png">
 						<img src="images/packs/pack3.png" alt="Titulo">
 					</a>
-
 				</div>
 			</div>
 		</div>
