--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
 					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 				</div> -->
 				<div class="modal-body">
-					<img src="images/packs/pack6.png" class="img-responsive center-block">
+					<img src="images/popup.png" class="img-responsive center-block">
 					<!-- <p class="text-center popupText">Feliz día de la mujer a ti mujer, madre, esposa, hermana, amiga, novia… A ustedes las mujeres, fuente insustituíble de la vida, apoyo, esperanza y calidez para los hombres y las civilizaciones</p> -->
 				</div>
 				<div class="modal-footer">
-					<div class="col-md-5 col-md-offset-2">
+					<div class="col-md-6 col-md-offset-2">
 						<div class="button-group">
-							<a href="Contacto.html" class="hire-me2">Solicitar promoción</a>
+							<a href="Contacto.html" class="hire-me2">Solicitar promociones</a>
 						</div>
 					</div>
 					<div class="col-md-3">
