--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	</div>
 
 	<div class="modal fade" id="modalPopup" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
-		<div class="modal-dialog">
+		<div class="modal-dialog modal-lg">
 			<div class="modal-content">
 <!-- 				<div class="modal-header">
 					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
@@ -57,7 +57,7 @@
 					<!-- <p class="text-center popupText">Feliz día de la mujer a ti mujer, madre, esposa, hermana, amiga, novia… A ustedes las mujeres, fuente insustituíble de la vida, apoyo, esperanza y calidez para los hombres y las civilizaciones</p> -->
 				</div>
 				<div class="modal-footer">
-					<div class="col-md-6 col-md-offset-2">
+					<div class="col-md-5 col-md-offset-2">
 						<div class="button-group">
 							<a href="Contacto.html" class="hire-me2">Solicitar promociones</a>
 						</div>
