Fotos en portafolio
Se añaden nuevas fotos al portafolio

--- a/Portafolio.html
+++ b/Portafolio.html
@@ -2454,7 +2454,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 project_img mbot30 effect-goliath isotopeSelector artedeco">
+							<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 project_img mbot30 effect-goliath isotopeSelector arteimpresiones">
 								<div class="img-container">
 									<img src="images/portafolio/arteimpresiones2000.jpg" class="img1-responsive">
 									<div class="overlay">
@@ -2464,7 +2464,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 project_img mbot30 effect-goliath isotopeSelector artedeco">
+							<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 project_img mbot30 effect-goliath isotopeSelector arteimpresiones">
 								<div class="img-container">
 									<img src="images/portafolio/arteimpresiones8888.jpg" class="img1-responsive">
 									<div class="overlay">
@@ -2474,11 +2474,91 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 project_img mbot30 effect-goliath isotopeSelector artedeco">
+							<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 project_img mbot30 effect-goliath isotopeSelector arteimpresiones">
 								<div class="img-container">
 									<img src="images/portafolio/arteimpresiones88888.jpg" class="img1-responsive">
 									<div class="overlay">
 										<a href="images/portafolio/zoom/arteimpresiones88888.jpg" class="image-zoom" data-effect="mfp-zoom-in">
+											<i class="flaticon-arrows-2"></i>
+										</a>
+									</div>
+								</div>
+							</div>
+							<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 project_img mbot30 effect-goliath isotopeSelector artedeco">
+								<div class="img-container">
+									<img src="images/portafolio/artedeco72.jpg" class="img1-responsive">
+									<div class="overlay">
+										<a href="images/portafolio/zoom/artedeco72.jpg" class="image-zoom" data-effect="mfp-zoom-in">
+											<i class="flaticon-arrows-2"></i>
+										</a>
+									</div>
+								</div>
+							</div>
+							<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 project_img mbot30 effect-goliath isotopeSelector artedeco">
+								<div class="img-container">
+									<img src="images/portafolio/artedeco73.jpg" class="img1-responsive">
+									<div class="overlay">
+										<a href="images/portafolio/zoom/artedeco73.jpg" class="image-zoom" data-effect="mfp-zoom-in">
+											<i class="flaticon-arrows-2"></i>
+										</a>
+									</div>
+								</div>
+							</div>
+							<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 project_img mbot30 effect-goliath isotopeSelector artedeco">
+								<div class="img-container">
+									<img src="images/portafolio/artedeco74.jpg" class="img1-responsive">
+									<div class="overlay">
+										<a href="images/portafolio/zoom/artedeco74.jpg" class="image-zoom" data-effect="mfp-zoom-in">
+											<i class="flaticon-arrows-2"></i>
+										</a>
+									</div>
+								</div>
+							</div>
+							<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 project_img mbot30 effect-goliath isotopeSelector artedeco">
+								<div class="img-container">
+									<img src="images/portafolio/artedeco75.jpg" class="img1-responsive">
+									<div class="overlay">
+										<a href="images/portafolio/zoom/artedeco75.jpg" class="image-zoom" data-effect="mfp-zoom-in">
+											<i class="flaticon-arrows-2"></i>
+										</a>
+									</div>
+								</div>
+							</div>
+							<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 project_img mbot30 effect-goliath isotopeSelector artedeco">
+								<div class="img-container">
+									<img src="images/portafolio/artedeco76.jpg" class="img1-responsive">
+									<div class="overlay">
+										<a href="images/portafolio/zoom/artedeco76.jpg" class="image-zoom" data-effect="mfp-zoom-in">
+											<i class="flaticon-arrows-2"></i>
+										</a>
+									</div>
+								</div>
+							</div>
+							<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 project_img mbot30 effect-goliath isotopeSelector artedeco">
+								<div class="img-container">
+									<img src="images/portafolio/artedeco77.jpg" class="img1-responsive">
+									<div class="overlay">
+										<a href="images/portafolio/zoom/artedeco77.jpg" class="image-zoom" data-effect="mfp-zoom-in">
+											<i class="flaticon-arrows-2"></i>
+										</a>
+									</div>
+								</div>
+							</div>
+							<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 project_img mbot30 effect-goliath isotopeSelector artedeco">
+								<div class="img-container">
+									<img src="images/portafolio/artedeco78.jpg" class="img1-responsive">
+									<div class="overlay">
+										<a href="images/portafolio/zoom/artedeco78.jpg" class="image-zoom" data-effect="mfp-zoom-in">
+											<i class="flaticon-arrows-2"></i>
+										</a>
+									</div>
+								</div>
+							</div>
+							<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 project_img mbot30 effect-goliath isotopeSelector artedeco">
+								<div class="img-container">
+									<img src="images/portafolio/artedeco79.jpg" class="img1-responsive">
+									<div class="overlay">
+										<a href="images/portafolio/zoom/artedeco79.jpg" class="image-zoom" data-effect="mfp-zoom-in">
 											<i class="flaticon-arrows-2"></i>
 										</a>
 									</div>
