--- a/Promociones.html
+++ b/Promociones.html
@@ -127,6 +127,13 @@
 		<div class="row">
 			<div class="col-sm-6 col-md-4">
 				<div class="thumbnail">
+					<a class="lightbox" href="images/packs/pack10.jpg">
+						<img src="images/packs/pack10.jpg" alt="Titulo">
+					</a>
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-4">
+				<div class="thumbnail">
 					<a class="lightbox" href="images/packs/pack8.jpg">
 						<img src="images/packs/pack8.jpg" alt="Titulo">
 					</a>
