--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
 	<div class="modal fade" id="modalPopup" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
 		<div class="modal-dialog modal-lg">
 			<div class="modal-content">
-<!-- 				<div class="modal-header">
+				<div class="modal-header">
 					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-				</div> -->
+				</div>
 				<div class="modal-body">
 					<img src="images/popup.png" class="img-responsive center-block">
 					<!-- <p class="text-center popupText">Feliz día de la mujer a ti mujer, madre, esposa, hermana, amiga, novia… A ustedes las mujeres, fuente insustituíble de la vida, apoyo, esperanza y calidez para los hombres y las civilizaciones</p> -->
 				</div>
-				<div class="modal-footer">
+				<!-- <div class="modal-footer">
 					<div class="col-md-5 col-md-offset-2">
 						<div class="button-group">
 							<a href="Contacto.html" class="hire-me2">Solicitar promociones</a>
@@ -67,7 +67,7 @@
 							<a class="btn-hire-default" data-dismiss="modal">Cerrar</a>
 						</div>
 					</div>
-				</div>
+				</div> -->
 			</div>
 		</div>
 	</div>
